Halos Midori, Thorns; Misc Fixes

--- a/src/main/resources/assets/wanderlust/lang/en_us.json
+++ b/src/main/resources/assets/wanderlust/lang/en_us.json
@@ -237,6 +237,8 @@
   "item.wanderlust.halo_armor_effect_smithing_template_desc_5": "Square Variant",
   "item.wanderlust.halo_armor_effect_smithing_template_desc_6": "Cherub Variant",
   "item.wanderlust.halo_armor_effect_smithing_template_desc_7": "Dark Variant",
+  "item.wanderlust.halo_armor_effect_smithing_template_desc_8": "Midori Variant",
+  "item.wanderlust.halo_armor_effect_smithing_template_desc_9": "Thorns Variant",
 
   "item.wanderlust.mod_icon": "Mod Icon",
 
